--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="loader JS_on">
             <span class="binary"></span>
             <span class="binary"></span>
-            <span class="getting-there">LOADING STUFF...</span>
+            <span class="getting-there">AMR SAABRY...</span>
         </div>
 
 
@@ -987,11 +987,12 @@
     <footer class="footer">
         <div class="container">
 
-            <p class="h1 logo">
-                <a href="#">
-         AmrSabry<span>.</span>
-        </a>
-            </p>
+            <a href="#home">
+                <button class="button" data-text="Awesome">
+    <span class="actual-text">&nbsp;AmrSabry&nbsp;</span>
+    <span aria-hidden="true" class="front-text">&nbsp;AmrSabry&nbsp;</span>
+</button>
+            </a>
 
             <p class="copyright">
                 &copy; 2022 <a href="#">AMR</a>. All rights reserved
