--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
                                 <div class="skill-card">
                                     <div class="tooltip">MongoDB</div>
 
-                                    <div class="card-icon">
-                                        <img src="./assets/images/png-clipart-logo-brand-product-design-mongodb-inc-design-text-computer-thumbnail-removebg-preview (1).png" class="mongo" alt="">
+                                    <div class="card-icon mongo">
+                                        <img src="./assets/images/png-clipart-logo-brand-product-design-mongodb-inc-design-text-computer-thumbnail-removebg-preview (1).png" alt="">
                                     </div>
                                 </div>
                             </li>
