--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     - favicon
   -->
 
-
+    <style>
+        .card-icon img {
+            width: 70px !important;
+            height: 70px !important;
+        }
+        
+        .mongo img {
+            height: 30px !important;
+        }
+    </style>
     <!-- 
     - custom css link
   -->
@@ -28,7 +37,7 @@
 </head>
 
 <body id="top" class="dark_theme">
-    <!-- 
+
     <div class="spiner">
 
 
@@ -40,7 +49,7 @@
         </div>
 
 
-    </div> -->
+    </div>
     <!-- 
     - #HEADER
   -->
